--- a/package.json
+++ b/package.json
@@ -34,12 +34,7 @@
     "prettier": "^1.10.2"
   },
   "dependencies": {
-    "apollo-server-express": "^1.3.5",
-    "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "graphql": "^0.13.2",
-    "graphql-tools": "^2.23.1",
-    "mongodb": "^2.2.34",
-    "morgan": "^1.9.0"
+    "ioredis": "^3.2.2"
   }
 }
